[package]
name = "ptranse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.1", features = ["derive"] }
text_io = "0.1.10"
rayon = "1.5.1"
indicatif = "0.16.2"
rand = "0.8.4"
thread_local = "1.1.4"
num_cpus = "1.13.1"
crossbeam = "0.8.1"
petgraph = "0.6.0"
lasso = "0.6.0"
fxhash = "0.2.1"
